konst/tests/misc_tests/destructure_rec_ui_tests/from_ref_tuple_err.stderr
error[E0308]: mismatched types
 --> tests/misc_tests/destructure_rec_ui_tests/from_ref_tuple_err.rs:4:5
  |
4 |     konst::destructure_rec!{(foo, bar, baz) = foo}
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |     |
  |     expected `(_, _, _)`, found `&(u8, u8, u8)`
  |     arguments to this function are incorrect
  |
  = note:  expected tuple `(_, _, _)`
          found reference `&(u8, u8, u8)`
note: function defined here
 --> src/macros/destructuring.rs
  |
  | pub const fn assert_same_type<T>(this: T, that: T) {
  |              ^^^^^^^^^^^^^^^^
  = note: this error originates in the macro `$crate::__destructure_rec__recursive` which comes from the expansion of the macro `konst::destructure_rec` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/misc_tests/destructure_rec_ui_tests/from_ref_tuple_err.rs:9:5
  |
9 |     konst::destructure_rec!{(foo, bar, baz): &Tuple = foo}
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |     |
  |     expected `(_, _, _)`, found `&(u8, u8, u8)`
  |     arguments to this function are incorrect
  |
  = note:  expected tuple `(_, _, _)`
          found reference `&(u8, u8, u8)`
note: function defined here
 --> src/macros/destructuring.rs
  |
  | pub const fn assert_same_type<T>(this: T, that: T) {
  |              ^^^^^^^^^^^^^^^^
  = note: this error originates in the macro `$crate::__destructure_rec__recursive` which comes from the expansion of the macro `konst::destructure_rec` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/misc_tests/destructure_rec_ui_tests/from_ref_tuple_err.rs:17:5
   |
17 |     konst::destructure_rec!{[(foo, bar, baz), _] = foo}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     |
   |     expected `(_, _, _)`, found `&(u8, u8, u8)`
   |     arguments to this function are incorrect
   |
   = note:  expected tuple `(_, _, _)`
           found reference `&(u8, u8, u8)`
note: function defined here
  --> src/macros/destructuring.rs
   |
   | pub const fn assert_same_type<T>(this: T, that: T) {
   |              ^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `$crate::__destructure_rec__recursive` which comes from the expansion of the macro `konst::destructure_rec` (in Nightly builds, run with -Z macro-backtrace for more info)
